--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
-    <link rel="stylesheet" href="../bootstrap.min.css">
-    <link rel="stylesheet" href="todo.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
@@ -30,6 +30,6 @@
         </div>
     </div>
 </body>
-<script src="./todo.js"></script>
+<script src="./app.js"></script>
 
 </html>
